--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <li><a href="./textformat.html">Text format</a></li>
         <li><a href="./media element.html">Media Elementes</a></li>
         <li><a href="./List.html">Lists</a></li>
+        <li><a href="./hello.html">Hello</a></li>
+
     </ul>
      <h2><u>Text Formating Tages</u></h2>
     <p>This is a <b>paragraph</b> That contains various <i>text formations like <u>underlined</u> Text </p></i> and <i>italicized</i> text.
