--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="./media element.html">Media Elementes</a></li>
         <li><a href="./List.html">Lists</a></li>
         <li><a href="./hello.html">Hello</a></li>
+        <li><a href="./dark.html">Dark</a></li>
 
     </ul>
      <h2><u>Text Formating Tages</u></h2>
